ascanrules: SAST (SonarLint) Fixes
- Declare arrays properly (square brackets on type not name).
- Use List.of instead of Arrays.asList
- Leverage TimeUnit to reduce millisecond math and make things more
readable.
- Remove thrown exception declarations where they can't be encountered.
- Reduce unnecessary intermediate store operations.
- Remove low value comments.
- Format some block/bulk comments to use fewer lines.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>